# hetzner

./: .env.local  Cargo.toml  README.md  hetzner-cloud-openapi.json  openapi.json  todo.md
.github/: copilot-instructions.md
docs/: API_REFERENCE.md  COMPREHENSIVE_DOCUMENTATION.md
docs/plans/: 2026-03-05-full-openapi-implementation.md
mcp/: README.md  example-config.json  package.json
mcp/scripts/: generate_e2e_tests.mjs
mcp/src/: index.js
mcp/tests/: e2e-all-routes.test.mjs
scripts/: build_custom_openapi.mjs  generate_api_reference.mjs  generate_cloud_integration_tests.mjs  generate_cloud_ops.mjs  generate_cloud_ops_tests.mjs
src/: client.rs  error.rs  lib.rs  main.rs  types.rs
src/api/: mod.rs
src/api/cloud/: actions.rs  domains.rs  enums.rs  generated_ops.rs  load_balancers_api.rs  mod.rs  private_networks.rs  servers.rs  servers_api.rs  storage.rs
src/api/dns/: mod.rs  records.rs  zones.rs
src/records/: create_record.rs  delete_record.rs  get_all_records.rs  get_record.rs  mod.rs  update_record.rs
src/zones/: get_all_zones.rs  mod.rs  zone_types.rs
tests/: cloud_facades_test.rs  cloud_generated_ops_full_test.rs  cloud_integration_crud_test.rs  cloud_integration_test.rs  dns_full_api_test.rs
