[dependencies]
dotenv = "0.15.0"
serde_json = "1.0.140"
tracing = "0.1.41"

[dependencies.reqwest]
features = ["json"]
version = "0.12.15"

[dependencies.serde]
features = ["derive"]
version = "1.0.219"

[dependencies.tokio]
features = ["full"]
version = "1.44.2"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.19"

[dev-dependencies]
httpmock = "0.7.0"

[package]
authors = ["Floris floris@xylex.ai"]
description = "A Rust library for managing DNS records and zones on Hetzner's platform, providing tools for networking and DNS management."
edition = "2024"
license = "MIT"
name = "hetzner"
readme = "README.md"
repository = "https://github.com/floris-xlx/hetzner"
version = "1.0.0"
